--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 mybatis.config-location=classpath:mybatis/mybatis-config.xml
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
-mybatis.type-aliases-package=com.neo.model
+mybatis.type-aliases-package=com.example.analysis.datalock.model
 
-spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:oracle:thin:@175.6.65.134:1521:ecptdb
+spring.datasource.username=DEV_CUST
+spring.datasource.password=hnZTF123$%^
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
